<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/containerMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".product.MainActivity">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvTotal"
        android:layout_width="0dp"
        android:layout_height="@dimen/product_preview_card_height"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/bViewCart"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="@dimen/common_padding_default"
        android:layout_marginEnd="@dimen/common_padding_min"
        android:gravity="center_vertical"
        android:text="@string/Product_empty_cart"
        android:textAppearance="?attr/textAppearanceHeadline6"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bViewCart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/tvTotal"
        app:layout_constraintBottom_toBottomOf="@id/tvTotal"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/common_padding_min"
        android:layout_marginEnd="@dimen/common_padding_default"
        android:text="@string/Product_view_cart"
        />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nsvProducts"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tvTotal"
        android:orientation="horizontal"
        android:visibility="gone"
        tools:visibility="visible">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/item_product"/>

    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/llProgress"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_main_waiting_text" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>